--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="facebook_app_id">1518116478456530</string>
+    <string name="title_activity_nfcdata_received">NFCDataReceivedActivity</string>
 
 </resources>
